tests/error/class-3.moc
@class Point {
    int x;
    int x;
}
@end
